--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-addons-css-transition-group": "15.6.0",
     "react-addons-shallow-compare": "15.5.2",
     "react-addons-update": "15.6.0",
+    "react-codemirror": "^1.0.0",
     "react-datepicker": "0.48.0",
     "react-day-picker": "6.1.0",
     "react-dom": "^16.2.0",
